--- a/argocd/helm/ace-user-roles.yaml
+++ b/argocd/helm/ace-user-roles.yaml
@@ -31,8 +31,6 @@ spec:
     repoURL: ghcr.io/appscode-charts
     targetRevision: v2024.9.30
   syncPolicy:
-    automated:
-      prune: true
-      selfHeal: true
+    automated: {}
     syncOptions:
     - CreateNamespace=true
