--- a/argocd/helm/license-proxyserver.yaml
+++ b/argocd/helm/license-proxyserver.yaml
@@ -18,8 +18,18 @@ spec:
     server: "https://kubernetes.default.svc"
     namespace: kubeops
   syncPolicy:
-    automated:
-      prune: true
-      selfHeal: true
+    automated: {}
     syncOptions:
     - CreateNamespace=true
+
+  ignoreDifferences:
+  - jsonPointers:
+    - /data
+    kind: Secret
+    name: license-proxyserver-apiserver-cert
+    namespace: kubeops
+  - group: apiregistration.k8s.io
+    kind: APIService
+    name: v1alpha1.proxyserver.licenses.appscode.com
+    jsonPointers:
+    - /spec/caBundle
