--- a/argocd/kustomize/kubestash.yaml
+++ b/argocd/kustomize/kubestash.yaml
@@ -13,6 +13,23 @@ spec:
     repoURL: https://github.com/appscode/gitops.git
     targetRevision: HEAD
   syncPolicy:
-    automated:
-      prune: true
-      selfHeal: true
+    automated: {}
+
+  ignoreDifferences:
+  - jsonPointers:
+    - /data
+    kind: Secret
+    name: kubestash-kubestash-operator-webhook-cert
+    namespace: kubestash
+  - group: apps
+    kind: Deployment
+    name: kubestash-kubestash-operator-operator
+    namespace: kubestash
+    jsonPointers:
+    - /spec/template/metadata/annotations/checksum~1apiregistration.yaml
+  - group: apps
+    kind: Deployment
+    name: kubestash-kubestash-operator-webhook-server
+    namespace: kubestash
+    jsonPointers:
+    - /spec/template/metadata/annotations/checksum~1apiregistration.yaml
