--- a/argocd/kustomize/panopticon.yaml
+++ b/argocd/kustomize/panopticon.yaml
@@ -1,15 +1,15 @@
 apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
-  name: kubeops
+  name: panopticon
   namespace: argocd
 spec:
   destination:
-    namespace: kubeops
+    namespace: monitoring
     server: https://kubernetes.default.svc
   project: default
   source:
-    path: kustomize/kubeops/base
+    path: kustomize/panopticon/base
     repoURL: https://github.com/appscode/gitops.git
     targetRevision: HEAD
   syncPolicy:
@@ -19,10 +19,16 @@ spec:
   - jsonPointers:
     - /data
     kind: Secret
-    name: license-proxyserver-apiserver-cert
-    namespace: kubeops
+    name: panopticon-apiserver-cert
+    namespace: monitoring
   - group: apiregistration.k8s.io
     kind: APIService
-    name: v1alpha1.proxyserver.licenses.appscode.com
+    name: v1alpha1.validators.metrics.appscode.com
     jsonPointers:
     - /spec/caBundle
+  - group: apps
+    kind: Deployment
+    name: panopticon
+    namespace: monitoring
+    jsonPointers:
+    - /spec/template/metadata/annotations/checksum~1apiregistration.yaml
