--- a/argocd/kustomize/stash.yaml
+++ b/argocd/kustomize/stash.yaml
@@ -13,6 +13,34 @@ spec:
     repoURL: https://github.com/appscode/gitops.git
     targetRevision: HEAD
   syncPolicy:
-    automated:
-      prune: true
-      selfHeal: true
+    automated: {}
+
+  ignoreDifferences:
+  - jsonPointers:
+    - /data
+    kind: Secret
+    name: stash-stash-enterprise-apiserver-cert
+    namespace: stash
+  - group: apiregistration.k8s.io
+    kind: APIService
+    name: v1alpha1.admission.stash.appscode.com
+    jsonPointers:
+    - /spec/caBundle
+    - /metadata/annotations/admission-webhook.appscode.com~1active
+    - /metadata/annotations/admission-webhook.appscode.com~1status
+  - group: apiregistration.k8s.io
+    kind: APIService
+    name: v1alpha1.repositories.stash.appscode.com
+    jsonPointers:
+    - /spec/caBundle
+  - group: apiregistration.k8s.io
+    kind: APIService
+    name: v1beta1.admission.stash.appscode.com
+    jsonPointers:
+    - /spec/caBundle
+  - group: apps
+    kind: Deployment
+    name: stash-stash-enterprise
+    namespace: stash
+    jsonPointers:
+    - /spec/template/metadata/annotations/checksum~1apiregistration.yaml
