--- a/kustomize/kubeops/base/kustomization.yaml
+++ b/kustomize/kubeops/base/kustomization.yaml
@@ -39,3 +39,13 @@ helmCharts:
   namespace: kubeops
   version: v2024.9.30
   repo: oci://ghcr.io/appscode-charts
+
+patches:
+- target:
+    group: apiextensions.k8s.io
+    kind: CustomResourceDefinition
+    name: servicemonitors.monitoring.coreos.com
+  patch: |
+    - op: add
+      path: "/metadata/annotations/config.kubernetes.io~1local-config"
+      value: "true"
