--- a/kustomize/panopticon/base/kustomization.yaml
+++ b/kustomize/panopticon/base/kustomization.yaml
@@ -20,3 +20,13 @@ helmCharts:
   namespace: monitoring
   version: v2024.11.8
   repo: oci://ghcr.io/appscode-charts
+
+patches:
+- target:
+    group: apiextensions.k8s.io
+    kind: CustomResourceDefinition
+    name: servicemonitors.monitoring.coreos.com
+  patch: |
+    - op: add
+      path: "/metadata/annotations/config.kubernetes.io~1local-config"
+      value: "true"
